some changes to foreword

--- a/galois.tex
+++ b/galois.tex
@@ -21,11 +21,11 @@
 
 \setcounter{section}{-1}
 \section{Foreword}
-These are some notes on Galois theory following H. M. Edwards' \textit{Galois Theory}. Galois theory is an overlooked subject in Cornell's algebra sequence -- it's given a passing mention in MATH 4340, the honors abstract algebra course, and it's kind of a shame it's treated this way. It underscores a nice connection between fields and groups and it's a big part of why one would want to study fields in the first place. I think Galois theory is important in leveling up an understanding of number theory as well to deal with fields and number systems beyond just the integers too, and I think it's useful in algebraic NT. I really don't know much more in this regard so I should stop talking now lol but those are my thoughts there.
+These are some notes on Galois theory following H. M. Edwards' \textit{Galois Theory}. Galois theory is an overlooked subject in Cornell's algebra sequence -- it's only given a passing mention in MATH 4340, the honors abstract algebra course, and it's kind of a shame it's treated this way. At its heart is a nice connection between fields and groups and I feel like it's a big part of why one would want to study fields in the first place. I also think Galois theory is important in leveling up an understanding of number theory as well as dealing with fields and number systems in general beyond just the integers, so I think it's useful in algebraic NT...? I really don't know much more in this regard so I should stop talking lol but those are my thoughts on why it's important, at least.
 
-I also think that there's a lot of historical mystique around the field as well -- a lot of people know the story of how Evariste Galois was shot and killed in a duel at age 21, and the night before he died he feverishly wrote down the groundwork for this really amazing theory. Well, with the benefit of the historical background and explanation provided by Edwards, we get to see the context for what Galois did, and maybe understand the angle at which he was coming from when he wrote all that stuff. I don't think this is a very standard treatment of the subject at all, but I think it's fun nonetheless and will do some mixing in with Dummit and Foote as needed.
+I also think that there's a lot of historical mystique around the field as well -- a lot of people know the story of how Evariste Galois was shot and killed in a duel at age 21, and the night before he died he feverishly wrote down the groundwork for this really amazing theory. What a story, right? I kinda like Edwards' book because the smoke and mirrors are cleared here -- you get the benefit of the historical context in which Galois was working, and also understand the angle at which he was coming from when he wrote all that stuff without losing the modern interpretation of the results. I don't think this is a very standard treatment of the subject at all, but I think it's fun nonetheless and will do some mixing in with Dummit and Foote as needed.
 
-Some prerequisites -- while you don't technically need to have any background in algebra to understand the book, I will assume familiarity with group theory in these notes. These notes are a distillation of the important developments in the field's history and while the book does go out of its way to also explain groups and stuff, I won't. There's also the whole story with Cardano and Tartaglia and Ferrari and Del Ferro provided as historical context for the solutions of the cubic and the quartic which is commonly used as setup for Abel-Ruffini, which is something often discussed in Galois theory (and part of the historical context) -- if you're interested in the story, I won't rehash it here as so many people do it, but if you don't know about it you should find out.
+Some prerequisites -- while you don't technically need to have any background in algebra to understand the book, I will assume familiarity with group theory in these notes. These notes are a distillation of the important developments in the field's history and while the book does go out of its way to also explain groups and stuff, I won't. There's also the whole story about solving the cubic/quartic with Cardano and Tartaglia and Ferrari and del Ferro which is commonly used as historical setup for Abel-Ruffini, a theorem often discussed in a treatment Galois theory -- if you're interested in the story, I won't rehash it here as so many people do it, but if you don't know about it you should find out! Veritasium has a really nice popular depiction of it and he does a much better job than I ever could so I'll assume you'll get the story from elsewhere and I won't have to talk about it.
 
 \section{History of Solving Polynomial Equations}
 A brief history:
