--- a/galois.tex
+++ b/galois.tex
@@ -150,13 +150,13 @@ For a cubic with roots $x, y, z$, consider instead the quantity $t = x + \omega 
 \[
     L(x) = (x - t_1) (x - t_2) (x - t_3) (x - t_4) (x - t_5) (x - t_6)
 \]
-This polynomial $L(x)$ is called the \textit{Lagrange resolvent}. While it is a sixth-degree polynomial, note that this is actually a quadratic in $x^3$, as for some $t_1$, $\omega t_1$ and $\omega^2 t_1$ are two of the other $t_i$s, so those three terms can be collected as $x^3 - t_1^3$. The other three factors can similarly be collected as $x^3 - t_4^3$ for some suitable labeling. Either way, we can solve for $t_1$ and $t_4$ now, which will be Vandermonde's $x + \omega y + \omega^2 z$ and $x + \omega^2 y + \omega z$, and the coefficients are precisely the above $u + v$ and $uv$. The only problem now is to identify which of the six solutions of the resolvent to use to generate the solutions. 
+The expression for $t$ is called the \textit{resolvent}, and the auxiliary polynomial $L(x)$ is called the \textit{resolvent equation}. While it is a sixth-degree polynomial, note that this is actually a quadratic in $x^3$, as for some $t_1$, $\omega t_1$ and $\omega^2 t_1$ are two of the other $t_i$s, so those three terms can be collected as $x^3 - t_1^3$. The other three factors can similarly be collected as $x^3 - t_4^3$ for some suitable labeling. Either way, we can solve for $t_1$ and $t_4$ now, which will be Vandermonde's $x + \omega y + \omega^2 z$ and $x + \omega^2 y + \omega z$, and the coefficients are precisely the above $u + v$ and $uv$. The only problem now is to identify which of the six solutions of the resolvent equation to use to generate the solutions. 
 
-Lagrange deals with this by stating for any solution of the resolvent, WLOG let $t = x + \omega y + \omega^2 z$. Then, note that $w = (x + \omega y + \omega^2 z)(x + \omega^2 y + \omega z)$ is symmetric in $x, y, z$, as we just see by expansion (or by noting that if $uv$ is symmetric in $x, y, z$, so must its cube root): 
+Lagrange deals with this by taking any solution of the resolvent equation, WLOG let $t = x + \omega y + \omega^2 z$. Then, note that $w = (x + \omega y + \omega^2 z)(x + \omega^2 y + \omega z)$ is symmetric in $x, y, z$, as we just see by expansion (or by noting that if $uv$ is symmetric in $x, y, z$, so must its cube root): 
 \[
     w = x^2 + \omega^2 xy + \omega xz + \omega xy + y^2 + \omega^2 yz + \omega^2 xz + \omega yz + z^2 = x^2 + y^2 + z^2 - (xy + yz + zx) 
 \]
-Then, we can just compute $w$ explicitly and then take $\frac w t$ as the corresponding other solution of the resolvent that is needed to match $t$, so we're all good. 
+Then, we can just compute $w$ explicitly and then take $\frac w t$ as the corresponding other solution of the resolvent equation that is needed to match $t$, so we're all good. 
 
 Note that this method relies more on the properties of symmetric polynomials and less of a guess/ansatz, but requires us to solve a higher degree equation. In particular, we can do the same thing with quartics and higher degree polynomials as well. 
 
@@ -165,13 +165,13 @@ Quartics turn out to be easier with both methods. For instance, when employing V
 \[
     \frac 14 [(w + x + y + z) + \sqrt[4]{(w + ix - y - iz)^4} + \sqrt[4]{(w - x + y - z)^4} + \sqrt[4]{(w - ix - y + iz)^4}]
 \]
-but we actually only need to consider the third term $t = w - x + y - z$ when employing Lagrange's method. Taking into consideration all 24 orderings of these 4 roots, we actually only get 6 possible values for $t$ depending on the ordering ($\pm (w - x + y - z), \pm (w + x - y - z), \pm (w - x - y + z)$). If we call each of these terms $t_1, t_2, t_3$, respectively, then the resolvent is a 24th-degree polynomial, but it can be greatly reduced: 
+but we actually only need to consider the third term $t = w - x + y - z$ when employing Lagrange's method. Taking into consideration all 24 orderings of these 4 roots, we actually only get 6 possible values for $t$ depending on the ordering ($\pm (w - x + y - z), \pm (w + x - y - z), \pm (w - x - y + z)$). If we call each of these terms $t_1, t_2, t_3$, respectively, then the resolvent equation is a 24th-degree polynomial, but it can be greatly reduced: 
 \[
     L(x) = (x + t_1)^4 (x - t_1)^4 (x + t_2)^4 (x - t_2)^4 (x + t_3)^4 (x - t_3)^4 = (x^2 - t_1^2)^4 (x^2 - t_2^2)^4 (x^2 - t_3^2)^4 
 \]  
-Hmm, so let's consider instead $M(x) = (x^2 - t_1^2) (x^2 - t_2^2)(x^2 - t_3^2)$, which is a cubic in $x^2$, and whose coefficients are going to be symmetric in $t_1, t_2, t_3$, so we will get symmetry in $w, x, y, z$ as well. This cubic can be solved with the method of Lagrange resolvents or with Cardano's method, so we'll eventually be able to extract $t_1, t_2,$ and $t_3$. 
+Hmm, so let's consider instead $M(x) = (x^2 - t_1^2) (x^2 - t_2^2)(x^2 - t_3^2)$, which is a cubic in $x^2$, and whose coefficients are going to be symmetric in $t_1, t_2, t_3$, so we will get symmetry in $w, x, y, z$ as well. This cubic can be solved with the method of resolvents or with Cardano's method, so we'll eventually be able to extract $t_1, t_2,$ and $t_3$. 
 
-Like with the cubic, we won't know just from the extraction of the roots of the resolvent ($M(x)$ or otherwise) how to extract the roots. As above, note that the product $p = t_1 t_2 t_3$ is evaluatable as it's symmetric in $w, x, y, z$. Moreover, if we let $s = w + x + y + z$, taking the following sums gives us each of the roots: 
+Like with the cubic, we won't know just from the extraction of the roots of the resolvent equation ($M(x)$ or otherwise) how to extract the roots. As above, note that the product $p = t_1 t_2 t_3$ is evaluatable as it's symmetric in $w, x, y, z$. Moreover, if we let $s = w + x + y + z$, taking the following sums gives us each of the roots: 
 \begin{align*}
     w &= \frac 14 (s + t_1 + t_2 + t_3) \\ 
     x &= \frac 14 (s - t_1 + t_2 - t_3) \\ 
@@ -181,10 +181,120 @@ Like with the cubic, we won't know just from the extraction of the roots of the 
 Picking any two $t_1$ and $t_2$ that aren't negatives of each other, then, and taking $t_3 = \frac p {t_1 t_2}$ will give us the correct sign for $t_3$. We can then play the signs on the $t_1$ and $t_2$ we choose to get all of the solutions we want. 
 
 \subsection{Quintics and Beyond}
-What about doing this for quintics or higher-order polynomials? We simply just have to us higher-order roots of unity -- for instance, for a quintic, a $\zeta = e^{\frac{2\pi}5 i}$ is needed in the term $t$ for the Lagrange resolvent. If our roots are $v, w, x, y, z$, then for the Lagrange method, we want $t = v + \zeta w + \zeta^2 x + \zeta^3 y + \zeta^4 z$, which results in 120 distinct terms, and a degree-120 polynomial as our resolvent. We can simplify by noting that if $t$ is a root of the resolvent, so are $\zeta t$, $\zeta^2 t$, $\zeta^3 t$, and $\zeta^4 t$, so collecting these all together we know we can refactor this as a factor of $x^5 - t^5$ for each distinct ordering of the roots under cyclic permutations. This allows us to write the resolvent as a degree-24 polynomial in $x^5$\dots if only we could know how to proceed by solving degree-24 polynomial equations! So we appear to be kind of stuck here...
+What about doing this for quintics or higher-order polynomials? We simply just have to us higher-order roots of unity -- for instance, for a quintic, a $\zeta = e^{\frac{2\pi}5 i}$ is needed in the term $t$ for the resolvent. If our roots are $v, w, x, y, z$, then for the Lagrange method, we want $t = v + \zeta w + \zeta^2 x + \zeta^3 y + \zeta^4 z$, which results in 120 distinct terms, and a degree-120 polynomial as our resolvent equation. We can simplify by noting that if $t$ is a root of the resolvent equation, so are $\zeta t$, $\zeta^2 t$, $\zeta^3 t$, and $\zeta^4 t$, so collecting these all together we know we can refactor this as a factor of $x^5 - t^5$ for each distinct ordering of the roots under cyclic permutations. This allows us to write the resolvent equation as a degree-24 polynomial in $x^5$\dots if only we could know how to proceed by solving degree-24 polynomial equations! So we appear to be kind of stuck here...
 
-The situation is not much better for larger $n$ -- as $n$ grows, the degree of the resolvent grows like $n!$, and it becomes essentially impossible to solve these resolvents for their roots. So we appear to be stuck again in our quest to solve polynomial equations, but we at least have a general procedure for any polynomial! 
+The situation is not much better for larger $n$ -- as $n$ grows, the degree of the resolvent equation grows like $n!$, and it becomes essentially impossible to solve these equations for their roots. So we appear to be stuck again in our quest to solve polynomial equations, but we at least have a general procedure for any polynomial. The only issue is that when computing the resolvent/resolvent equations, we may have to compute some roots of unity in order to compute its coefficients in general, and doing this in general is not necessarily the easiest thing (for roots of unity with factors of primes greater than 11, for instance). 
 
+As a historical note, the particular form of the expressions $t$ that we've chosen, e.g. $x + \omega y + \omega^z$, where we have roots of unity as coefficients for each supposed root of the original equation, is called a \textit{Lagrange resolvent}. We could theoretically take any general polynomial in the $n$ roots of a polynomial and try to use them as the roots of a more solvable polynomial when permuting the $n$ roots in all possible ways, and so we want to now study resolvents in general. 
+
+
+\section{Galois Resolvents}
+In general, Lagrange's idea for solving a degree-$n$ polynomial equation is to concoct some sort of \textit{resolvent}. We saw some examples of resolvents that worked for cubics and quartics, but here are some properties that Lagrange thought a useful, general resolvent should have: 
+\begin{enumerate}[label=\roman*)]
+    \item It needs to be a polynomial in the roots/coefficients of the polynomial and the $n$th roots of unity, with rational coefficients otherwise (assuming that we will be able to evaluate $n$th roots of unity. This will allow us to be able to evaluate the coefficients of the resolvent equation. 
+    \item We also want to be able to the resolvent to help us solve for the roots of the original polynomial, so we want to be able to rationally express the roots of the original polynomial in terms of the different values of the resolvent. 
+    \item Hopefully, we should be able to compute the roots of the resolvent equation.
+\end{enumerate}
+These resolvents seem to be hard to find for polynomials of degree 5 or higher -- at least by example, as Lagrange's resolvent didn't work. Lagrange worked on trying to characterize resolvents with properties i) and ii), which served as foundational work for Galois' work. 
+
+\subsection{Lagrange's Rational Function Theorem}
+Here's Lagrange's theorem on resolvents, which talks about being able to rationally express certain polynomials in the roots of the polynomials in terms of others if they behave the same under permutations. First, let's define an action of permutations $\pi \in S_n$ on polynomials in $n$ variables: 
+\begin{definition}
+    If $\pi \in S_n$, and $p(x_1, \dots, x_n)$ is a polynomial in $n$ variables, then define the group action of $S_n$ on $p$ by $\pi p = p(x_{\pi(1)}, \dots, x_{\pi(n)})$. 
+\end{definition}
+\begin{theorem}[Rational Function Theorem]
+    Let $p(x_1, \dots, x_n)$ and $q(x_1, \dots, x_n)$ be polynomials (our candidate resolvents), and let $\pi_1 p, \dots, \pi_k p$ be the formally distinct polynomials obtained by applying all $\pi \in S_n$ to $p(x_1, \dots, x_n)$. If $q$ is such that for any $\pi \in S_n$ such that $\pi p = p$ implies $\pi q = q$, then $q(x_1, \dots, x_n)$ can be expressed as a rational function in terms of $p(x_1, \dots, x_n)$ and elementary symmetric polynomials the $n$ variables $x_i$ (i.e. as a quotient of polynomials involving these known quantities).  
+\end{theorem}
+\begin{remark}
+    Suppose we define the resolvent polynomial $L(X)$ similarly to how we did in the last section: 
+    \[
+        L(X; x_1, \dots, x_n) = (X - \pi_1 p(\vect x)) \dots (X - \pi_k p(\vect x)) = \prod_{i=1}^k (X - \pi_i p(x_1, \dots, x_n)) 
+    \]  
+    where $\vect x$ is shorthand for $(x_1, \dots, x_n)$. 
+    If we plug into $p$ very specific (unknown) roots $r_1, \dots, r_n$ of some $n$th degree polynomial, note that $L(X; r_1, \dots, r_n)$ may not have simple roots -- it might be the case that two of the roots could be numerically coincident, especially if two of the roots are coincident. We'll see how to deal with this later, but this has no bearing on the truth of Lagrange's Rational Function Theorem. Just see that the roots of $L(X)$ will also be expressible in terms of values of $q$, which allows us to interchange resolvents essentially. 
+    
+    As another note, if we fix the (unknown) roots we're plugging in as $r_1, \dots, r_n$ as the roots of some given polynomial, then note that the coefficients of $L(X)$ will be evaluatable using the coefficients of that polynomial, i.e. the elementary symmetric polynomials in those roots. Note that the polynomial $L(X)$ has roots that are all of the formally distinct values of the resolvent with the roots permuted in all different ways. In particular, switching the labels on any two of the roots won't change the set of roots of $L(X)$ [the $\pi_i p(r_1, \dots, r_n)$s], and $L(X)$ has coefficients that are symmetric polynomials in the $\pi_i p(r_1, \dots, r_n)$s, so the coefficients of $L(x)$ are also symmetric polynomials in the $r_j$s. That means that we can evaluate the coefficients of $L(X)$ by the fundamental theorem of symmetric polynomials, so this construction for the resolvent equation is at least a reasonable quantity that we could always try and compute. 
+\end{remark}
+Let's prove the Rational Function Theorem with a little linear algebra now: 
+\begin{proof}
+Define the $r_j$s, $p$, $q$, and $\pi_i p$s and $\pi_i q$s as above/corresponding to the setup in the theorem, and in particular suppose that $\pi_1 p, \dots, \pi_k p$ are all of the formally distinct polynomials obtained by permuting the variables in $p$, where the $\pi_j$s are all elements of $S_n$. Let's now also take the corresponding $\pi_1 q$, \dots, $\pi_k q$. First, we need to show that this is also an exhaustive list of all possible $\pi q$ for $\pi \in S_n$. 
+
+First, consider the stabilizer $S_p$ of the action of $S_n$ on $p$, i.e. the set of all $\pi \in S_n$ such that $\pi p = p$. $S_p$ is a subgroup of $S_n$, and as such every element $\tau \in S_n$ is in a left coset of $S_p$. Since each of the $\pi_i p$s are distinct, note that each $\pi_i$ must be in a distinct left coset of $S_p$. (Note if some $\pi_i$ and $\pi_j$ are in the same left coset of $S_p$, then $\pi_i$ and $\pi_j$ would have to produce the same action on $p$.) Then, each $\pi_i$ is a representative for a left coset of $S_p$, so then every $\tau \in S_n$ is equal to some $\pi_i \sigma$, for $\sigma \in S_p$. As such, $\tau q = \pi_i \sigma q$, but then by hypothesis, if $\sigma$ is in the stabilizer of the action of $S_n$ on $p$, then it's also in the stabilizer of the action of $S_n$ on $q$, so $\tau q = \pi_i q$. Therefore, the set of all $\pi_i q$ is in fact exhaustive. 
+
+At this point, for the sake of brevity, let $p_i = \pi_i p$ and $q_i = \pi_i q$. Let's now consider the following expressions: 
+\begin{align*}
+    & q_1 + q_2 + \dots + q_k \\ 
+    & p_1 q_1 + p_2 q_2 + \dots + p_k q_k \\ 
+    & p_1^2 q_1 + p_2^2 q_2 + \dots + p_k^2 q_k \\ 
+    & \qquad \qquad \quad \vdots \\
+    & p_1^{k-1} q_1 + p_2^{k-1} q_2 + \dots + p_k^{k-1} q_k 
+\end{align*}
+Note that each of these is a symmetric polynomial in the $x_i$s. Note that permuting the $x_i$s just swaps the $p_i$s with each other, and swaps the $q_i$s in the same way, so these are all symmetric in the $x_i$s, and are therefore expressible as a polynomial in the elementary symmetric polynomials in the $x_i$s. As such, let $h_j(e_1, \dots, e_n) = \sum_{i=1}^k p_i^j q_i$ for $0 \leq j < k$, and note that each of these $h_j$s are known. 
+Let's now view this system of equalities in the following way: 
+\[
+    \bmat{1 & 1 & \dots & 1 \\
+          p_1 & p_2 & \dots & p_k \\ 
+          \vdots & \vdots & \ddots & \vdots \\ 
+          p_1^{k-1} & p_2^{k-1} & \dots & p_k^{k-1}}
+    \bmat{q_1 \\ q_2 \\ \vdots \\ q_k } = \bmat{h_0(e_1, \dots, e_n) \\ h_1 (e_1, \dots, e_n) \\ \vdots \\  h_{k-1}(e_1, \dots, e_n)} 
+\]
+One of the $p_i$s must be $p$ exactly, WLOG suppose $p_1 = p$, so $q_1 = q$ also. We will now attempt to solve for $q_1$ with Cramer's rule now. Recall that Cramer's rule says that
+\[
+    q_1 = \frac{\det \bmat{h_0 & 1 & \dots & 1 \\
+          h_1 & p_2 & \dots & p_k \\ 
+          \vdots & \vdots & \ddots & \vdots \\ 
+          h_{k-1} & p_2^{k-1} & \dots & p_k^{k-1}}}{\det \bmat{1 & 1 & \dots & 1 \\
+          p_1 & p_2 & \dots & p_k \\ 
+          \vdots & \vdots & \ddots & \vdots \\ 
+          p_1^{k-1} & p_2^{k-1} & \dots & p_k^{k-1}}}
+\]
+Recall that this denominator is the Vandermonde determinant of the $p_i$s, and we know it's not zero by construction as it's equal to $\det V(p_1 \dots, p_k) = \prod_{1 \leq i < j \leq k} (p_j - p_i)$. We'll do something a little contrived though -- 
+\[
+    q_1 = \frac{\det V(p_1, \dots, p_k) \cdot \det \bmat{h_0 & 1 & \dots & 1 \\
+          h_1 & p_2 & \dots & p_k \\ 
+          \vdots & \vdots & \ddots & \vdots \\ 
+          h_{k-1} & p_2^{k-1} & \dots & p_k^{k-1}} }{\det V(p_1, \dots, p_k)^2}
+\]
+Regardless of the squaring, the denominator is symmetric in the $p_i$s, which are collectively symmetric in the $x_i$s, so this denominator is certainly expressible in terms of elementary symmetric polynomials in the $x_i$s. It suffices to treat the numerator. 
+
+We now claim that the polynomial in the numerator is symmetric in the $p_2, \dots, p_k$. If we swap some $p_i$ and $p_j$ (both not $p_1$), the sign of the first determinant flips and the sign of the Vandermonde determinant also flips, so the numerator remains invariant under these swaps. Then, the numerator is expressible as a polynomial in the elementary symmetric polynomials in $p_2, \dots, p_k$ (let's call them $f_1^{(k-1)}, \dots, f_{k-1}^{(k-1)})$) and in particular, when we expand this polynomial in powers of $p_1$, each coefficient will be a symmetric polynomial in the other $p_i$s expressible in the $f_j^{(k-1)}$s. But, if $f_i^{(k)}$ is the $i$th elementary symmetric polynomial in all of the $p_i$s, then recall from our proof of the fundamental theorem of symmetric polynomials we can express each of the $f_j^{(k-1)}$s in terms of the $f_j^{(k)}$s and $p_1$, so the numerator is therefore a polynomial in the elementary symmetric polynomials of the $p_i$s and $p_1$, the former of which is expressible in the elementary symmetric polynomials of the $x_i$s. This completes the proof of Lagrange's Rational Function Theorem. 
+\end{proof}
+
+This gives us an immediate corollary/definition: 
+\begin{corollary}
+If we have a polynomial $p$ in $x_1, \dots, x_n$ such that applying all elements $\pi \in S_n$ to $p$ produces $n!$ different values, then any polynomial $q(x_1, \dots, x_n)$ is expressible as a rational function in the elementary symmetric polynomials of the $x_i$s and $p$.
+\end{corollary}
+This can be applied now to a specific set of roots $r_1, \dots, r_n$ of some polynomial equation: 
+\begin{definition}
+    A \textbf{Galois resolvent} of a polynomial with roots $r_1, \dots, r_n$ is a polynomial $p(x_1, \dots, x_n)$ such that over all $\pi \in S_n$, $\pi p(r_1, \dots, r_n)$ gives $n!$ distinct numerical results. 
+\end{definition}
+\begin{corollary}
+The roots of a polynomial are expressible numerically as a rational function of the coefficients of that polynomial (i.e. elementary symmetric polynomials in the roots) and a Galois resolvent for that polynomial, if one exists. 
+\end{corollary}
+In particular, Lagrange's Rational Function Theorem gives us somewhat of a construction for how to go about expressing each root as a function of the coefficients of the polynomial and a Galois resolvent, if it exists. 
+
+\begin{remark}
+    Note that Galois resolvents have an additional constraint -- it's not enough for the $n!$ permutations acting on the resolvent to give different formal polynomials, there's a numerical dependence on the roots too! In particular, if a polynomial has repeated roots, this Galois resolvent can't exist. However, there's an easy way to test whether a polynomial $f(x)$ has a repeated root or not -- if $f(x)$ and $f'(x)$ have a nontrivial gcd (i.e. a polynomial that is linear or of higher degree), then that polynomial must divide both $f(x)$ and $f'(x)$, and so we can isolate those repeated roots! Therefore, we only really need to care about solving polynomials with all simple roots, as this derivative trick will allow us to handle any multiplicities. 
+\end{remark}
+
+\subsection{Existence of Galois Resolvents}
+So now, it seems like the key to solving general polynomials through Lagrange's method is to be able to construct a Galois resolvent of a given polynomial equation. How do we do this? In particular, how do we know one exists? 
+
+Galois was the first to realize that these so-called Galois resolvents always existed, and used them extensively in his work. In particular, he claimed that for any polynomial with simple roots $r_1, \dots, r_n$, that a Galois resolvent exists in these roots that is a polynomial with integer coefficients. Let's do it now. 
+
+\subsection{How to Use a Galois Resolvent}
+
+\section{Splitting Fields}
+
+
+\section{Galois Groups}
+
+
+\section{Groups of Solvable Equations}
+
+
+
+\section{The Fundamental Theorem of Galois Theory}
 
 \section{Aside -- Gauss and Roots of Unity}
 We've been discussing the roots of unity when we introduced Lagrange resolvents, so we'll focus on them a little more now. Recall that $n$th roots of unity are of the form $\cos\left(\frac{2\pi k} n \right) + i \sin \left( \frac{2\pi k} n \right) = e^{\frac{2\pi k}n i}$ for $0 \leq k < n$. In order to manipulate these properly, we'd like to be able to compute these algebraically in terms of roots and standard algebraic operations. Define a \textit{primitive} $n$th root of unity to be a root of unity $e^{\frac{2\pi k}n i}$ such that for any $m < n$, $(e^{\frac{2\pi k}n i})^m \neq 1$. This is equivalent to saying that we want $\gcd(k, n) = 1$, as otherwise if $\gcd(k, n) = d > 1$, then $(e^{\frac{2\pi k}n i})^{\frac n d} = 1$ (and the converse is also true). 
@@ -202,20 +312,5 @@ I don't really remember how to prove this or what the proof looks like, so I'll 
 \begin{proof}
 haha haven't done it yet
 \end{proof}
-
-\section{Galois Resolvents}
-In general, Lagrange's idea for solving a degree-$n$ polynomial equation is to concoct some sort of \textit{resolvent}. We saw some examples of resolvents that worked for cubics and quartics, but here are some properties that a general resolvent should have: 
-\begin{itemize}
-    \item It needs to be a polynomial in the elementary symmetric sums of the roots/coefficients of the polynomial and the $n$th roots of unity with rational coefficients (so we know this polynomial is evaluatable).
-    \item We also want the resolvent to help us solve for the roots of the original polynomial.
-\end{itemize}  
-
-\section{Galois Groups}
-
-\section{Groups of Solvable Equations}
-
-\section{Splitting Fields}
-
-\section{The Fundamental Theorem of Galois Theory}
 
 \end{document}
